refactor to split enclave from isolate creation. update readmes
modules demesnes and isolates excluded by default, added with profile
"isolates"